--- a/app/src/app/page.mdx
+++ b/app/src/app/page.mdx
@@ -12,12 +12,10 @@ export const metadata = {
 
 # ⚡ Spark Made Easy
 
-<p className="mt-10">
-[Apache Spark](https://spark.apache.org/) is a simple, massively scalable, data processing engine... and you should use it. {{ className: 'lead' }}
+[Apache Spark](https://spark.apache.org/) is a simple, massively scalable, data processing engine... and you should use it. {{ className: 'lead mt-10' }}
 
 For most common data tasks, it's also probably simpler than using [Pandas](https://pandas.pydata.org/) or [NumPy](https://numpy.org/).
 And if you're already comfortable with SQL, you can learn about 80% of what you'll probably ever need in a single afternoon. {{ className: 'lead' }}
-</p>
 
 <div className="not-prose">
   <Button href="/quick_start" variant="text" arrow="right">
