--- a/app/src/app/load_data/page.mdx
+++ b/app/src/app/load_data/page.mdx
@@ -11,64 +11,54 @@ With Spark, it's simple to load data of any familiar format from a variety of di
 
 ## First let's download some data...
 
-<Row>
-    <Col>
-    Download an example dataset. One version of the data is in csv format, the other is in json.
-    </Col>
-    <Col>
-    ```python {{ title: "PySpark" }}
-    import requests
+Download an example dataset. One version of the data is in csv format, the other is in json.
 
-    with open("/data/winemag-reviews.csv", "wb") as file:
-        csv_url = "http://tinyurl.com/winemag-reviews-csv"
-        file.write(requests.get(csv_url).content)
+```python {{ title: "PySpark" }}
+import requests
 
-    with open("/data/winemag-reviews.json", "wb") as file:
-        json_url = "http://tinyurl.com/winemag-reviews-json"
-        file.write(requests.get(json_url).content)
-    ```
-    </Col>
-</Row>
+with open("/data/winemag-reviews.csv", "wb") as file:
+    csv_url = "http://tinyurl.com/winemag-reviews-csv"
+    file.write(requests.get(csv_url).content)
+
+with open("/data/winemag-reviews.json", "wb") as file:
+    json_url = "http://tinyurl.com/winemag-reviews-json"
+    file.write(requests.get(json_url).content)
+```
 
 ## ...and then load it into a dataframe
 
-<Row>
-    <Col>
-    Use `spark.read.format()` to specify the format of the data you want to load. Spark supports all major data storage formats, including csv, json, parquet, and many more.
+Use `spark.read.format()` to specify the format of the data you want to load. Spark supports all major data storage formats, including csv, json, parquet, and many more.
 
-    You can use `.printSchema()` to see the schema of the data you loaded. {{ className: "mt-[220px]" }}
-    </Col>
-    <Col>
-    ```python {{ title: "PySpark" }}
-    from pyspark.sql import SparkSession
+You can use `.printSchema()` to see the schema of the data you loaded.
 
-    spark = SparkSession.builder.getOrCreate()
+```python {{ title: "PySpark" }}
+from pyspark.sql import SparkSession
 
-    csv_path = "/data/winemag-reviews.csv"
-    df1 = spark.read.format("csv").load(csv_path, header=True)
+spark = SparkSession.builder.getOrCreate()
 
-    json_path = "/data/winemag-reviews.json"
-    df2 = spark.read.format("json").load(json_path)
+csv_path = "/data/winemag-reviews.csv"
+df1 = spark.read.format("csv").load(csv_path, header=True)
+df1.printSchema()
 
-    df2.printSchema()
-    ```
+json_path = "/data/winemag-reviews.json"
+df2 = spark.read.format("json").load(json_path)
+df2.printSchema()
+```
 
-    ```python {{title: "Output"}}
-    root
-     |-- _c0: string (nullable = true)
-     |-- country: string (nullable = true)
-     |-- description: string (nullable = true)
-     |-- designation: string (nullable = true)
-     |-- points: string (nullable = true)
-     |-- price: string (nullable = true)
-     |-- province: string (nullable = true)
-     |-- region_1: string (nullable = true)
-     |-- region_2: string (nullable = true)
-     |-- taster_name: string (nullable = true)
-     |-- taster_twitter_handle: string (nullable = true)
-     |-- title: string (nullable = true)
-     |-- variety: string (nullable = true)
-     |-- winery: string (nullable = true)
-    ```
-    </Col>
-</Row>
+```python {{title: "Output"}}
+root
+ |-- _c0: string (nullable = true)
+ |-- country: string (nullable = true)
+ |-- description: string (nullable = true)
+ |-- designation: string (nullable = true)
+ |-- points: string (nullable = true)
+ |-- price: string (nullable = true)
+ |-- province: string (nullable = true)
+ |-- region_1: string (nullable = true)
+ |-- region_2: string (nullable = true)
+ |-- taster_name: string (nullable = true)
+ |-- taster_twitter_handle: string (nullable = true)
+ |-- title: string (nullable = true)
+ |-- variety: string (nullable = true)
+ |-- winery: string (nullable = true)
+```
