--- a/app/src/app/load_data/page.mdx
+++ b/app/src/app/load_data/page.mdx
@@ -43,22 +43,20 @@ df1.printSchema()
 json_path = "/data/winemag-reviews.json"
 df2 = spark.read.format("json").load(json_path)
 df2.printSchema()
-```
 
-```python {{title: "Output"}}
-root
- |-- _c0: string (nullable = true)
- |-- country: string (nullable = true)
- |-- description: string (nullable = true)
- |-- designation: string (nullable = true)
- |-- points: string (nullable = true)
- |-- price: string (nullable = true)
- |-- province: string (nullable = true)
- |-- region_1: string (nullable = true)
- |-- region_2: string (nullable = true)
- |-- taster_name: string (nullable = true)
- |-- taster_twitter_handle: string (nullable = true)
- |-- title: string (nullable = true)
- |-- variety: string (nullable = true)
- |-- winery: string (nullable = true)
+#  root
+#   |-- _c0: string (nullable = true)
+#   |-- country: string (nullable = true)
+#   |-- description: string (nullable = true)
+#   |-- designation: string (nullable = true)
+#   |-- points: string (nullable = true)
+#   |-- price: string (nullable = true)
+#   |-- province: string (nullable = true)
+#   |-- region_1: string (nullable = true)
+#   |-- region_2: string (nullable = true)
+#   |-- taster_name: string (nullable = true)
+#   |-- taster_twitter_handle: string (nullable = true)
+#   |-- title: string (nullable = true)
+#   |-- variety: string (nullable = true)
+#   |-- winery: string (nullable = true)
 ```
