--- a/app/src/app/modifying_dataframes/page.mdx
+++ b/app/src/app/modifying_dataframes/page.mdx
@@ -7,9 +7,7 @@ export const metadata = {
 
 # Modifying Dataframes
 
-Create a new column with `.withColumn()` or on the fly with `.selectExpr()`.a
-
-Let's set up some test data and create some new calculated columns.
+Let's set up some test data and create some new calculated columns. {{className:"lead"}}
 
 <Note>
     **Note:** We're now including `from pyspark.sql import functions as F` with our imports.
