--- a/app/src/app/column_selection/page.mdx
+++ b/app/src/app/column_selection/page.mdx
@@ -7,7 +7,7 @@ export const metadata = {
 
 # Column Selection
 
-There are a few different ways to select columns from a dataframe. In this chapter, we'll go over the `select()` and `selectExpr()` functions.
+There are a few different ways to select columns from a dataframe. {{className:"lead"}}
 
 ## Build a dummy dataframe
 
@@ -28,9 +28,9 @@ df.show()
 #  +----+---+----------+
 ```
 
-## Using `select()`
+## Using `.select()`
 
-There are a few different ways you can reference dataframe columns.
+This is the most common way to select columns. You can pass in a list of column names or Column objects.
 
 ```python {{title:"Python"}}
 from pyspark.sql import functions as F
@@ -53,7 +53,7 @@ df.show()
 #  +----+---+----------+----------+------------+----------------+------------+
 ```
 
-## Using `selectExpr()`
+## Using `.selectExpr()`
 
 With the `.selectExpr()` method, all arguments are treated as SQL statements, as if you were using F.expr().
 
