--- a/app/src/app/window_functions/page.mdx
+++ b/app/src/app/window_functions/page.mdx
@@ -60,7 +60,7 @@ result_df.show(4)
 # +------------------+--------------------+------+---------+
 ```
 
-## Using expressions
+## Using Expressions
 
 ```python {{title: "Python"}}
 # Using an expression
