Update copy on index

--- a/app/src/app/page.mdx
+++ b/app/src/app/page.mdx
@@ -12,10 +12,10 @@ export const metadata = {
 
 # ⚡ Spark Made Easy
 
-[Apache Spark](https://spark.apache.org/) is a simple, massively scalable, data processing engine... and you should use it. {{ className: 'lead mt-10' }}
-
-For most common data tasks, it's also probably simpler than using [Pandas](https://pandas.pydata.org/) or [NumPy](https://numpy.org/).
+[Apache Spark](https://spark.apache.org/) is a simple, massively scalable, data processing engine. For most common data tasks, it is often simpler and more scalable than using [Pandas](https://pandas.pydata.org/) or [NumPy](https://numpy.org/).
 And if you're already comfortable with SQL, you can learn about 80% of what you'll probably ever need in a single afternoon. {{ className: 'lead' }}
+
+*Spark Made Easy* is an opinionated guide to help you learn the basics, along with teaching you common design patterns to help make your code simple, clean, and readable. {{className:"lead"}}
 
 <div className="not-prose">
   <Button href="/quick_start" variant="text" arrow="right">
