--- a/app/src/app/load_and_save_data/page.mdx
+++ b/app/src/app/load_and_save_data/page.mdx
@@ -5,7 +5,7 @@ export const metadata = {
     'Learn how to load data into Spark from different sources.',
 }
 
-# Loading data
+# Loading and Saving Data
 
 With Spark, it's simple to load data of any familiar format from a variety of different sources. {{ className: "lead" }}
 
