--- a/app/src/app/user_defined_functions/page.mdx
+++ b/app/src/app/user_defined_functions/page.mdx
@@ -74,7 +74,7 @@ df.select("country", reverse_word2("country").alias("yrtnuoc")).show(4, True)
 
 ## Pandas UDFs
 
-Pandas UDFs allow you to pass your data to pandas operations in a highly efficient manner. For more information [see here](https://docs.databricks.com/en/udf/pandas.html).
+Pandas UDFs allow you to pass your data to a function as a pandas series in a highly efficient manner. For more information [see here](https://docs.databricks.com/en/udf/pandas.html).
 
 Let's create a new dataset and see an example.
 
