--- a/app/src/app/hello_world/page.mdx
+++ b/app/src/app/hello_world/page.mdx
@@ -12,7 +12,7 @@ One nice thing about Spark is that under the hood, it's basically just a SQL dia
   The entry point to Spark is the `spark` session object. This is used to tell your Spark cluster what you want to do, whether it's reading data, writing data, or executing a query.
 </Note>
 
-```python {{ title: "PySpark" }}
+```python {{ title: "Python" }}
 from pyspark.sql import SparkSession
 
 # 1) Create a spark context
