--- a/app/src/app/page.mdx
+++ b/app/src/app/page.mdx
@@ -12,13 +12,13 @@ export const metadata = {
 
 # ⚡ Spark Made Easy
 
-[Apache Spark](https://spark.apache.org/) is a simple, massively scalable, data processing engine. For most common data tasks, it is often simpler and more scalable than using [Pandas](https://pandas.pydata.org/) or [NumPy](https://numpy.org/).
+[Apache Spark](https://spark.apache.org/) is a massively scalable data processing engine. For most common data tasks, it is often simpler and more scalable than using [Pandas](https://pandas.pydata.org/) or [NumPy](https://numpy.org/).
 And if you're already comfortable with SQL, you can learn about 80% of what you'll probably ever need in a single afternoon. {{ className: 'lead' }}
 
-*Spark Made Easy* is an opinionated guide to help you learn the basics, along with teaching you common design patterns to help make your code simple, clean, and readable. {{className:"lead"}}
+*Spark Made Easy* is the simplest guide for getting started with Apache Spark. Learn the basics of querying, along with common design patterns to help make your code simple, clean, and readable. {{className:"lead"}}
 
 <div className="not-prose">
   <Button href="/quick_start" variant="text" arrow="right">
-    So let's get started
+    Let's get started
   </Button>
 </div>
