--- a/app/src/app/load_and_save_data/page.mdx
+++ b/app/src/app/load_and_save_data/page.mdx
@@ -7,11 +7,11 @@ export const metadata = {
 
 # Loading and Saving Data
 
-With Spark, it's simple to load data of any familiar format from a variety of different sources. {{ className: "lead" }}
+With Spark, it's simple to load data of any familiar format from a variety of different sources.{{ className: "lead" }}
 
-**First let's download some data...**
+**First let's download some data...**{{ className: "lead" }}
 
-Download an example dataset. One version of the data is in csv format, the other is in json.
+Download an example dataset. One version of the data is in csv format, the other is in json.{{ className: "lead" }}
 
 ```python {{ title: "Python" }}
 import requests
@@ -27,9 +27,9 @@ with open("/data/winemag-reviews.json", "wb") as file:
 
 ## Loading Files
 
-Use `spark.read.format()` to specify the format of the data you want to load. Spark supports all major data storage formats, including csv, json, parquet, and many more.
+Use `spark.read.format()` to specify the format of the data you want to load. Spark supports all major data storage formats, including csv, json, parquet, and many more.{{ className: "lead" }}
 
-You can use `.printSchema()` to see the schema of the data you loaded.
+You can use `.printSchema()` to see the schema of the data you loaded.{{ className: "lead" }}
 
 ```python {{ title: "Python" }}
 from pyspark.sql import SparkSession
@@ -66,7 +66,7 @@ df2.printSchema()
 You can write your dataframe with the `write` attribute. When saving a file, you typically need to specify a few parameters:
 - specify the write `.mode()`
 - specify the save file format with `.format()`
-- (optional) indicate if you want partitioned columns with `.partitionBy()`
+- (optional) indicate if you want partitioned columns with `.partitionBy()`{{ className: "lead" }}
 
 ```python
 from pyspark.sql import SparkSession
@@ -94,9 +94,9 @@ out_fp = "/data/winemag-reviews.parquet"
 ```
 
 <Note>
-**Quick note on using partitions**: Partitioning can greatly improve query performance. You generally want to partition on columns that are used frequently in your queries, but you have to be careful not to select a column that will create too many partitions.
+**Quick note on using partitions**: Partitioning can greatly improve query performance. You generally want to partition on columns that are used frequently in your queries, but you have to be careful not to select a column that will create too many partitions.{{ className: "lead" }}
 
-A partition does not working like an index in SQL. If you're working with customer transaction data, you might be tempted to partition on `customer_id`, but you'd end up with a partition for every customer. However, partitioning on `year-month` or `date` might be a good idea.
+A partition does not working like an index in SQL. If you're working with customer transaction data, you might be tempted to partition on `customer_id`, but you'd end up with a partition for every customer. However, partitioning on `year-month` or `date` might be a good idea.{{ className: "lead" }}
 </Note>
 
-This is just a starting point. For more information [check out the official docs](https://spark.apache.org/docs/latest/sql-data-sources-load-save-functions.html).
+This is just a starting point. For more information [check out the official docs](https://spark.apache.org/docs/latest/sql-data-sources-load-save-functions.html).{{ className: "lead" }}
