--- a/app/src/app/grouping_and_agg/page.mdx
+++ b/app/src/app/grouping_and_agg/page.mdx
@@ -32,7 +32,7 @@ df.show(4)
 
 ## Using `.groupBy()` and `.agg()`
 
-If you know SQL, then this syntax should look familiar. Let's calculate the average score & price given by each wine taster.
+If you know SQL, then this syntax should look familiar. Let's calculate the average score & price given by each wine taster.{{ className: "lead" }}
 
 ```python {{title:"Python"}}
 df_agg = (
